--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,1 +1,100 @@
 /* footer */
+.footer-area {
+    .footer-links {
+        ul {
+            li {
+                margin-bottom: 15px;
+
+                a {
+                    color: $black-color;
+                }
+            }
+        }
+    }
+
+    .footer-address {
+        h5{
+            color: $black-color;
+        }
+        h5:last-child {
+            margin-top: 100px;
+        }
+    }
+
+    .form-input {
+        position: relative;
+
+        input {
+            width: 88%;
+            padding: 20px;
+            margin-top: 70px;
+            border: 0;
+            border-bottom: 1px solid $border-color;
+
+            &::placeholder {
+                color: $secondary-color;
+                padding-left: 80px;
+                font-size: 18px;
+            }
+        }
+
+
+        img {
+            width: 20px;
+            position: absolute;
+            top: 85px;
+            right: 15px;
+        }
+
+    }
+    
+    .marquee-area {
+        margin: 60px 0;
+        @keyframes marquee {
+            0% {
+                transform: translateX(0);
+            }
+    
+            100% {
+                transform: translateX(-100%);
+            }
+        }
+    
+        .marquee {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            overflow: hidden;
+    
+            .marquee-text {
+                text-transform: uppercase;
+                will-change: transform;
+                transform: translateX(0);
+                white-space: nowrap;
+                animation: marquee 50s linear infinite;
+                // Extra Styling
+                color: transparent;
+                -webkit-text-stroke: 2px rgba($primary-color-500, .5);
+                font-size: 250px;
+                font-weight: 900;
+    
+                span:hover {
+                    color: $primary-color-500;
+                    transition: $transition-long;
+                }
+            }
+        }
+    
+    }
+
+
+    .footer-bottom {
+        display: flex;
+        justify-content: space-between;
+
+        span {
+            display: block;
+            font-weight: 600;
+        }
+    }
+}
