--- a/assets/sass/settings/_variable.scss
+++ b/assets/sass/settings/_variable.scss
@@ -8,6 +8,7 @@ $secondary-color: #6D6D6D;
 $white-color: #ffffff;
 $black-color: #000000;
 $border-color: #B0B0B0;
+$primary-color-500: #4f4f4f;
 
 // google font
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;600;700&family=Playfair+Display:ital@1&display=swap');
